infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: veloz-ns
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
